--- a/css/style.sass
+++ b/css/style.sass
@@ -157,6 +157,19 @@ hr.diagonal
 @media screen and (max-width: 1300px)
   body
     font-size: 14px
-@media screen and (max-width: 1170px)
+/*@media screen and (max-width: 1170px)
   body
     font-size: 12px
+  .grid-sizer,
+  .grid-item 
+    width: 100%
+  .grid-item--width1  
+    width:  100% 
+  .grid-item--width2  
+    width:  100%
+  .grid-item--width3  
+    width:  100%
+  .grid-item--width4  
+    width:  100%  
+  .grid-item--width5  
+    width:  100% */
