--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,19 @@ hr.diagonal {
   body {
     font-size: 14px; } }
 
-@media screen and (max-width: 1170px) {
-  body {
-    font-size: 12px; } }
+/*@media screen and (max-width: 1170px)
+  body
+    font-size: 12px
+  .grid-sizer,
+  .grid-item
+    width: 100%
+  .grid-item--width1
+    width:  100%
+  .grid-item--width2
+    width:  100%
+  .grid-item--width3
+    width:  100%
+  .grid-item--width4
+    width:  100%
+  .grid-item--width5
+    width:  100% */
