--- a/css/hamburgers.css
+++ b/css/hamburgers.css
@@ -17,13 +17,13 @@
   border: 0;
   margin: 0;
   overflow: visible; 
-  border: 3px solid #fff;}
+  border: 0.25em solid #fff;}
   .hamburger:hover {
     opacity: 0.7; }
 
 .hamburger-box {
   width: 3em;
-  height: 24px;
+  height: 1.8em;
   display: inline-block;
   position: relative; }
 
@@ -43,9 +43,9 @@
     content: "";
     display: block; }
   .hamburger-inner::before {
-    top: -10px; }
+    top: -1em; }
   .hamburger-inner::after {
-    bottom: -10px; }
+    bottom: -1em; }
 
 /*
    * Spring
