--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,11 @@ body {
 * {
   outline: 0;
   margin: 0;
-  padding: 0;
-  -webkit-transition: 0.6s;
-  -o-transition: 0.6s;
-  transition: 0.6s; }
+  padding: 0; }
 
-ul {
-  list-style: none; }
+a {
+  text-decoration: none;
+  color: inherit; }
 
 .clearfix:before,
 .clearfix:after {
@@ -82,6 +80,9 @@ ul {
     margin: 6% auto 0; }
 
 .b_links img {
+  -webkit-transition: 0.6s;
+  -o-transition: 0.6s;
+  transition: 0.6s;
   margin: 0 0.55%;
   width: 2.5%; }
 
@@ -102,7 +103,9 @@ ul {
     width: 8em;
     margin: 18% 0 0 13.3%; }
   .b_menu .b_number {
-    margin: 10% 0 0 30%; }
+    margin: 10% 0 0 30%;
+    color: inherit;
+    text-decoration: none; }
   .b_menu .hamburger {
     margin: 10% 0 0 30%; }
 
@@ -118,8 +121,68 @@ hr.diagonal {
   -ms-transform: rotate(-47.06deg);
   transform: rotate(-47.06deg); }
 
-.three, .twelve {
-  background: #ebb240; }
+.b_projects, .b_studio, .b_news {
+  overflow: hidden;
+  background-color: #ebb240; }
+
+.b_projects {
+  background: #ebb240;
+  font-size: 0.9em;
+  text-transform: uppercase;
+  color: #fff; }
+  .b_projects .list {
+    margin: 35% 0 0 15%; }
+    .b_projects .list a {
+      position: relative;
+      -webkit-transition: 0.4s;
+      -o-transition: 0.4s;
+      transition: 0.4s;
+      line-height: 1.4em; }
+      .b_projects .list a span {
+        margin: 0 0 0 30%; }
+      .b_projects .list a img {
+        visibility: hidden;
+        position: absolute;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%); }
+    .b_projects .list a:hover {
+      color: #000; }
+    .b_projects .list a:hover img {
+      visibility: visible; }
+    .b_projects .list .i_list1, .b_projects .list .i_list2,
+    .b_projects .list .i_list3, .b_projects .list .i_list4,
+    .b_projects .list .i_list5 {
+      max-width: 30%; }
+    .b_projects .list .i_list1 .i_list11,
+    .b_projects .list .i_list2 .i_list21,
+    .b_projects .list .i_list3 .i_list31,
+    .b_projects .list .i_list4 .i_list41,
+    .b_projects .list .i_list5 .i_list51 {
+      display: none;
+      position: absolute; }
+    .b_projects .list .i_list1 .i_list11 {
+      margin: 30.5% 0 0 21.7%; }
+    .b_projects .list .i_list2 .i_list21 {
+      margin: 25.7% 0 0 21.7%; }
+    .b_projects .list .i_list3 .i_list31 {
+      margin: 21% 0 0 21.7%; }
+    .b_projects .list .i_list4 .i_list41 {
+      margin: 16.2% 0 0 21.7%; }
+    .b_projects .list .i_list5 .i_list51 {
+      margin: 11.3% 0 0 21.7%; }
+    .b_projects .list .i_list1:hover .i_list11,
+    .b_projects .list .i_list2:hover .i_list21,
+    .b_projects .list .i_list3:hover .i_list31,
+    .b_projects .list .i_list4:hover .i_list41,
+    .b_projects .list .i_list5:hover .i_list51 {
+      display: block; }
+    .b_projects .list h1 {
+      margin: 13.5% 0 0 25.54%;
+      font-size: 3em; }
+  .b_projects .list:hover .i_list-main {
+    display: none; }
 
 .four {
   background: url("../img/fondue.png") no-repeat 50% 50%;
@@ -153,6 +216,9 @@ hr.diagonal {
   background: url("../img/alessi.png") no-repeat 50% 50%;
   background-size: cover; }
 
+.twelve {
+  background: #ebb240; }
+
 .thirteen {
   background: #ff9b6d; }
 
@@ -173,10 +239,11 @@ hr.diagonal {
   body {
     font-size: 14px; } }
 
-/*@media screen and (max-width: 1170px)
-  body
-    font-size: 12px
-  .grid-sizer,
+@media screen and (max-width: 1170px) {
+  body {
+    font-size: 12px; } }
+
+/*.grid-sizer,
   .grid-item
     width: 100%
   .grid-item--width1
