--- a/css/style.sass
+++ b/css/style.sass
@@ -3,14 +3,17 @@ body
   font-family: 'Roboto Condensed', 'Roboto'
   color: #333333
   font-size: 18px
+  
 
 *
   outline: 0
   margin: 0
   padding: 0
-  transition: 0.6s
-ul
-  list-style: none
+  
+
+a
+  text-decoration: none
+  color: inherit
 
 .clearfix:before,
 .clearfix:after
@@ -73,6 +76,7 @@ ul
 
 .b_links
   img
+    transition: 0.6s
     margin: 0 0.55% 
     width: 2.5%
 
@@ -92,6 +96,8 @@ ul
     margin: 18% 0 0 13.3%
   .b_number
     margin: 10% 0 0 30%
+    color: inherit
+    text-decoration: none
   .hamburger
     margin: 10% 0 0 30%
 hr.diagonal
@@ -103,9 +109,65 @@ hr.diagonal
   width: 400%
   height: 0px
   transform: rotate(-47.06deg)
-
-.three, .twelve
+.b_projects, .b_studio, .b_news
+  overflow: hidden
+  background-color: #ebb240;
+.b_projects
   background: #ebb240
+  font-size: 0.9em
+  text-transform: uppercase
+  color: #fff
+  .list
+    margin: 35% 0 0 15%
+    a
+      position: relative
+      transition: 0.4s
+      line-height: 1.4em
+      span
+        margin: 0 0 0 30%
+      img
+        visibility: hidden
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+    a:hover
+        color: #000
+    a:hover img
+        visibility: visible
+    .i_list1, .i_list2, 
+    .i_list3, .i_list4,
+    .i_list5
+        max-width: 30%
+    .i_list1 .i_list11,
+    .i_list2 .i_list21,
+    .i_list3 .i_list31,
+    .i_list4 .i_list41,
+    .i_list5 .i_list51
+        display: none
+        position: absolute
+    .i_list1 .i_list11
+        margin: 30.5% 0 0 21.7%
+    .i_list2 .i_list21
+        margin: 25.7% 0 0 21.7%
+    .i_list3 .i_list31
+        margin: 21% 0 0 21.7%
+    .i_list4 .i_list41
+        margin: 16.2% 0 0 21.7%
+    .i_list5 .i_list51
+        margin: 11.3% 0 0 21.7%
+    .i_list1:hover .i_list11,
+    .i_list2:hover .i_list21,
+    .i_list3:hover .i_list31,
+    .i_list4:hover .i_list41,
+    .i_list5:hover .i_list51
+        display: block
+    h1
+      margin: 13.5% 0 0 25.54%
+      font-size: 3em
+  .list:hover .i_list-main
+      display: none
+
+  
 
 .four
   background: url("../img/fondue.png") no-repeat 50% 50%
@@ -138,7 +200,8 @@ hr.diagonal
 .eleven
   background: url("../img/alessi.png") no-repeat 50% 50%
   background-size: cover
-
+.twelve
+  background: #ebb240
 .thirteen
   background: #ff9b6d
 
@@ -157,10 +220,10 @@ hr.diagonal
 @media screen and (max-width: 1300px)
   body
     font-size: 14px
-/*@media screen and (max-width: 1170px)
+@media screen and (max-width: 1170px)
   body
     font-size: 12px
-  .grid-sizer,
+/*.grid-sizer,
   .grid-item 
     width: 100%
   .grid-item--width1  
