--- a/css/style.sass
+++ b/css/style.sass
@@ -14,6 +14,8 @@ body
 a
   text-decoration: none
   color: inherit
+ul
+  list-style: none
 
 .clearfix:before,
 .clearfix:after
@@ -137,7 +139,7 @@ hr.diagonal
     .i_list1, .i_list2, 
     .i_list3, .i_list4,
     .i_list5
-        max-width: 30%
+        max-width: 35%
     .i_list1 .i_list11,
     .i_list2 .i_list21,
     .i_list3 .i_list31,
@@ -165,17 +167,85 @@ hr.diagonal
       margin: 13.5% 0 0 25.54%
       font-size: 3em
   .list:hover .i_list-main
-      display: none
+      visibility: hidden
 
-  
+/*=======RELATIVE ELEMENTS FOR ALL BLOCKS=======*/
+.b_text
+  color: #333
+  font-size: 0.8em
+  text-transform: uppercase 
+  ul
+    margin: 2.2% 0 0 0
+  h1
+    font-size: 1.7em
+    font-weight: 300
+.i_view
+  font-size: 1.4em
+  max-width: 37%
+  position: relative
+  img
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+  span
+    margin: 0 0 0 17%
+    transition: 0.6s
+@keyframes opacity-delay
+    100%{opacity: 0.75;}
 
-.four
+.i_view:hover span
+    margin: 0% 0% 0% 22%
+    animation: opacity-delay 0.6s ease-out forwards
+    animation-delay: 0.6s
+
+.i_heart
+  color: #ff0000
+  text-align: center
+  width: 7%
+  line-height: 1.5em
+  svg
+    cursor: pointer
+    transition: 0.6s
+  path
+    transition: 0.6s
+    stroke: #000
+    stroke-width: 2em
+    fill: none
+  span
+    opacity: 0
+    font-size: 0.8em
+.i_heart:hover 
+  path
+    fill: red
+    stroke: red
+  svg
+    transform: scale(1.3)
+/*==================*/
+.b_fondue
   background: url("../img/fondue.png") no-repeat 50% 50%
   background-size: cover
+  .b_text
+    margin: 15% 0 0 17%
+  .i_view
+    margin: 15% 0 0 0
+  .i_heart  
+    margin: 15% 0 0 15%
 
-.five
+.b_potter
   background: url("../img/potter.png") no-repeat 50% 50%
   background-size: cover
+  .b_text
+      margin: 6% 0 0 7%
+      h4
+        font-weight: 300
+        margin: 2% 0 0    
+      p
+        line-height: 1.1em
+        width: 40%
+        text-transform: none
+      .i_heart
+        margin: 2% 0 0 13%
+
 
 .six
   background: url("../img/tabano.png") no-repeat 50% 50%
@@ -217,6 +287,8 @@ hr.diagonal
 @media screen and (max-width: 1350px)
   body
     font-size: 16px
+  .i_view img
+    width: 15px
 @media screen and (max-width: 1300px)
   body
     font-size: 14px
