--- a/css/style.css
+++ b/css/style.css
@@ -200,8 +200,8 @@ hr.diagonal {
 
 .i_view {
   font-size: 1.4em;
-  max-width: 37%;
-  position: relative; }
+  position: relative;
+  width: 40%; }
   .i_view img {
     position: absolute;
     top: 50%;
@@ -232,7 +232,7 @@ hr.diagonal {
 .i_heart {
   color: #ff0000;
   text-align: center;
-  width: 7%;
+  width: 10%;
   line-height: 1.5em; }
   .i_heart svg {
     cursor: pointer;
@@ -244,15 +244,15 @@ hr.diagonal {
     -o-transition: 0.6s;
     transition: 0.6s;
     stroke: #000;
-    stroke-width: 2em;
+    stroke-width: 1.5em;
     fill: none; }
   .i_heart span {
     opacity: 0;
     font-size: 0.8em; }
 
 .i_heart:hover path {
-  fill: red;
-  stroke: red; }
+  fill: #ff0000;
+  stroke: #ff0000; }
 
 .i_heart:hover svg {
   -webkit-transform: scale(1.3);
@@ -285,13 +285,40 @@ hr.diagonal {
     .b_potter .b_text .i_heart {
       margin: 2% 0 0 13%; }
 
-.six {
+.b_tabano {
   background: url("../img/tabano.png") no-repeat 50% 50%;
   background-size: cover; }
+  .b_tabano .b_text {
+    margin: 75% 0 0 12%; }
+    .b_tabano .b_text .b_text-left {
+      display: inline-block; }
+    .b_tabano .b_text .i_view {
+      margin: 7% 0 0 2%;
+      display: inline-block;
+      vertical-align: top; }
+    .b_tabano .b_text .i_heart {
+      margin: 7% 2% 0 0;
+      float: right; }
 
-.seven {
+.b_louis {
   background: url("../img/louis.png") no-repeat 50% 50%;
   background-size: cover; }
+  .b_louis .b_text {
+    color: #fefefe;
+    margin: 15% 0 0 11%; }
+    .b_louis .b_text .i_view {
+      margin: 13.5% 0 0 0;
+      width: 60%; }
+    .b_louis .b_text .i_heart {
+      color: #fe7c7c;
+      margin: 13.5% 0 0 25%;
+      width: 15%; }
+      .b_louis .b_text .i_heart path {
+        stroke: #fff; }
+      .b_louis .b_text .i_heart path:hover {
+        fill: #fff; }
+      .b_louis .b_text .i_heart span {
+        color: #fff; }
 
 .eight {
   background: url("../img/p22.png") no-repeat 50% 50%;
