--- a/css/style.sass
+++ b/css/style.sass
@@ -181,8 +181,8 @@ hr.diagonal
     font-weight: 300
 .i_view
   font-size: 1.4em
-  max-width: 37%
   position: relative
+  width: 40%
   img
     position: absolute
     top: 50%
@@ -201,7 +201,7 @@ hr.diagonal
 .i_heart
   color: #ff0000
   text-align: center
-  width: 7%
+  width: 10%
   line-height: 1.5em
   svg
     cursor: pointer
@@ -209,15 +209,15 @@ hr.diagonal
   path
     transition: 0.6s
     stroke: #000
-    stroke-width: 2em
+    stroke-width: 1.5em
     fill: none
   span
     opacity: 0
     font-size: 0.8em
 .i_heart:hover 
   path
-    fill: red
-    stroke: red
+    fill: #ff0000
+    stroke: #ff0000
   svg
     transform: scale(1.3)
 /*==================*/
@@ -247,13 +247,42 @@ hr.diagonal
         margin: 2% 0 0 13%
 
 
-.six
+.b_tabano
   background: url("../img/tabano.png") no-repeat 50% 50%
   background-size: cover
+  .b_text
+    margin: 75% 0 0 12%
+    .b_text-left
+        display: inline-block
+    .i_view
+        margin: 7% 0 0 2%
+        display: inline-block
+        vertical-align: top
+    .i_heart
+        margin: 7% 2% 0 0 
+        float: right
 
-.seven
+
+
+.b_louis
   background: url("../img/louis.png") no-repeat 50% 50%
   background-size: cover
+  .b_text
+    color: #fefefe
+    margin: 15% 0 0 11%
+    .i_view
+      margin: 13.5% 0 0 0
+      width: 60%
+    .i_heart
+      color: #fe7c7c
+      margin: 13.5% 0 0 25%
+      width: 15%
+      path
+        stroke: #fff
+      path:hover
+        fill: #fff
+      span
+        color: #fff
 
 .eight
   background: url("../img/p22.png") no-repeat 50% 50%
