--- a/css/style.sass
+++ b/css/style.sass
@@ -275,30 +275,84 @@ hr.diagonal
       width: 60%
     .i_heart
       color: #fe7c7c
-      margin: 13.5% 0 0 25%
+      margin: 10.5% 0 0 25%
       width: 15%
       path
         stroke: #fff
       path:hover
-        fill: #fff
-      span
-        color: #fff
+        stroke: #ff0000
 
-.eight
+.b_p22
   background: url("../img/p22.png") no-repeat 50% 50%
   background-size: cover
+  .b_text
+      margin: 15% 0 0 48%
+      .b_text-left
+        vertical-align: top
+        width: 40%
+        display: inline-block
+      .b_text-right
+        vertical-align: top
+        width: 55%
+        display: inline-block
+        .i_view
+          margin: 1% 0 0
+          width: 80%
+        .i_heart
+          margin: 15% 0 0 25%
+          width: 20%
 
-.nine
+.b_fiji
   background: url("../img/fiji.png") no-repeat 50% 50%
   background-size: cover
+  .b_text
+      margin: 10% 0 0 50%
+      .i_view
+        margin: 8% 0 0 0
+        width: 80%
+      .i_heart
+        margin: 5% 0 0 25%
+        width: 20%
 
-.ten
+.b_sesann
   background: url("../img/sesann.png") no-repeat 50% 50%
   background-size: cover
+  .b_text
+      margin: 25% 0 0 20%
+      .b_text-left
+        vertical-align: top
+        width: 35%
+        display: inline-block
+      .b_text-right
+        width: 40%
+        margin: 5.5% 0 0 4%
+        vertical-align: top
+        display: inline-block
+        .i_view
+          display: inline-block
+          vertical-align: top
+          width: 70%  
+        .i_heart
+          float: right
+          width: 20%
 
-.eleven
+.b_alessi
   background: url("../img/alessi.png") no-repeat 50% 50%
   background-size: cover
+  .b_text
+    margin: 25% 0 0 50%
+  .i_view
+    text-transform: uppercase
+    margin: 10% 0 0 38%
+    width: 60%
+    font-size: 1.1em
+  .i_heart
+    margin: 6% 0 0 60%
+    width: 20%
+    span
+      font-size: 0.65em
+
+
 .twelve
   background: #ebb240
 .thirteen
