--- a/css/style.sass
+++ b/css/style.sass
@@ -148,15 +148,15 @@ hr.diagonal
         display: none
         position: absolute
     .i_list1 .i_list11
-        margin: 30.5% 0 0 21.7%
+        margin: 2.95em 0 0 21%
     .i_list2 .i_list21
-        margin: 25.7% 0 0 21.7%
+        margin: 2.5em 0 0 21%
     .i_list3 .i_list31
-        margin: 21% 0 0 21.7%
+        margin: 2.03em 0 0 21%
     .i_list4 .i_list41
-        margin: 16.2% 0 0 21.7%
+        margin: 1.56em 0 0 21%
     .i_list5 .i_list51
-        margin: 11.3% 0 0 21.7%
+        margin: 1.12em 0 0 21%
     .i_list1:hover .i_list11,
     .i_list2:hover .i_list21,
     .i_list3:hover .i_list31,
@@ -164,7 +164,7 @@ hr.diagonal
     .i_list5:hover .i_list51
         display: block
     h1
-      margin: 13.5% 0 0 25.54%
+      margin: 1.12em 0 0 24.54%
       font-size: 3em
   .list:hover .i_list-main
       visibility: hidden
@@ -340,21 +340,77 @@ hr.diagonal
   background: url("../img/alessi.png") no-repeat 50% 50%
   background-size: cover
   .b_text
-    margin: 25% 0 0 50%
+    margin: 25% 0 0 49%
   .i_view
     text-transform: uppercase
     margin: 10% 0 0 38%
     width: 60%
     font-size: 1.1em
   .i_heart
-    margin: 6% 0 0 60%
+    margin: 4% 0 0 60%
     width: 20%
+    line-height: 1.2em
     span
       font-size: 0.65em
 
-
-.twelve
+.b_timeline
+  font-size: 0.9em
+  overflow: hidden
   background: #ebb240
+  text-transform: uppercase
+  line-height: 1.05em
+  color: #fff
+  .list
+    margin: 9% 0 0 12%
+    h4
+      margin: 0 0 2% 7.4%
+      color: #333
+    a
+      position: relative
+      transition: 0.4s
+      span
+        margin: 0 0 0 50%
+      img
+        visibility: hidden
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+    a:hover
+        color: #000
+    a:hover img
+        visibility: visible
+    .i_list1, .i_list2, 
+    .i_list3, .i_list4,
+    .i_list5
+        max-width: 15%
+    .i_list1 .i_list11,
+    .i_list2 .i_list21,
+    .i_list3 .i_list31,
+    .i_list4 .i_list41,
+    .i_list5 .i_list51
+        display: none
+        position: absolute
+    .i_list1 .i_list11
+        margin: 2.0em 0 0 21%
+    .i_list2 .i_list21
+        margin: 1.65em 0 0 21%
+    .i_list3 .i_list31
+        margin: 1.3em 0 0 21%
+    .i_list4 .i_list41
+        margin: 0.95em 0 0 21%
+    .i_list5 .i_list51
+        margin: 0.61em 0 0 21%
+    .i_list1:hover .i_list11,
+    .i_list2:hover .i_list21,
+    .i_list3:hover .i_list31,
+    .i_list4:hover .i_list41,
+    .i_list5:hover .i_list51
+        display: block
+    h1
+      margin: 1.11em 0 0 25.54%
+      font-size: 3em
+  .diagonal
+    right: 122%
 .thirteen
   background: #ff9b6d
 
