--- a/css/style.sass
+++ b/css/style.sass
@@ -61,6 +61,8 @@ ul
   width:  49%  
 .grid-item--width5  
   width:  69% 
+.grid-item--width10
+  width: 100%
  
 /* ------ GRID END ------ */
 /* ---------------------- */
@@ -360,7 +362,7 @@ hr.diagonal
   text-transform: uppercase
   line-height: 1.05em
   color: #fff
-  .list
+  .b_list
     margin: 9% 0 0 12%
     h4
       margin: 0 0 2% 7.4%
@@ -411,15 +413,102 @@ hr.diagonal
       font-size: 3em
   .diagonal
     right: 122%
-.thirteen
-  background: #ff9b6d
 
-.fourteen
-  background: #e9eae2
+.b_studio
+  background-color: #ff9b6d
+  h1
+    color: #fff
+    text-transform: uppercase
+    margin: 65% 0 0 45%
+    font-size: 3em
 
-.fifteen
-  background: #e9eae2
+.b_studio-info
+  font-size: 1em
+  color: #333
+  line-height: 1.05em
+  .b_studio-text
+    width: 72%
+    margin: 8% 0 0 12%
+    .b_text-left
+      vertical-align: top
+      display: inline-block
+      width: 50%
+      p
+        margin: 5% 0 0
+      p:first-child
+        margin: 0
+    .b_text-right
+      font-size: 0.7em
+      text-transform: uppercase
+      width: 47%
+      img
+        width: 100%
+      h4
+        margin: 12% 1.5% 0 1.5%
+        font-size: 1em
+        border-bottom: 1px solid #bfc0b9
+      ul
+        display: inline-block
+        margin: 7% 0 0 0
+        font-weight: 900
+        li
+          line-height: 1.3em
 
+.b_staff-wrapper
+  font-size: 0.8em
+.b_staff
+  margin: 9% 0 0 9.5% 
+  .staff-text, .staff-photo,
+  .cv
+    display: inline-block
+    vertical-align: top
+  .staff-text
+    margin: 0 2.2% 0 0
+    width: 20.5%
+    line-height: 1em
+    h4
+      font-size: 1.2em
+      text-transform: uppercase
+    p
+      margin: 8% 0 0 0
+  .staff-photo
+    margin: 0 0 0 1.5%
+    text-transform: uppercase
+    width: 20%
+    img
+      width: 100%
+    h4,p
+      line-height: 1em
+    h4
+      margin: 8% 0 0 0
+    .cv
+      position: relative
+      color: #fd5000
+      margin: 8% 0 0 0
+      font-weight: 900
+      width: 30%
+      img
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+        vertical-align: top
+        width: 25%
+      a 
+        margin: 0 10% 0 0
+        transition: 0.6s 
+      a:hover
+        margin: 0%
+    .links
+      margin: 7.5% 5% 0 0
+      padding: 0 0 0 20%
+      width: 45%
+      a
+        margin: 0 0 0 8%
+      img
+        transition: 0.6s
+        width: 14%
+      img:hover
+        transform: scale(1.3)
 .sixteen
   background: #575856
 
