--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   background: #e9eae2;
   font-family: 'Roboto Condensed', 'Roboto';
   color: #333333;
-  font-size: 18px; }
+  font-size: 20px; }
 
 * {
   outline: 0;
@@ -654,6 +654,14 @@ hr.diagonal {
   .b_footer .i_copyright {
     text-align: center;
     margin: 5% auto 0; }
+
+@media screen and (max-width: 1600px) {
+  body {
+    font-size: 19px; } }
+
+@media screen and (max-width: 1550px) {
+  body {
+    font-size: 18px; } }
 
 @media screen and (max-width: 1400px) {
   body {
