--- a/css/style.sass
+++ b/css/style.sass
@@ -2,7 +2,7 @@ body
   background: #e9eae2
   font-family: 'Roboto Condensed', 'Roboto'
   color: #333333
-  font-size: 18px
+  font-size: 20px
   
 
 *
@@ -599,8 +599,12 @@ hr.diagonal
       margin: 5% auto 0 
 
 
-
-
+@media screen and (max-width: 1600px)
+  body
+    font-size: 19px
+@media screen and (max-width: 1550px)
+  body
+    font-size: 18px
 @media screen and (max-width: 1400px)
   body
     font-size: 17px
