--- a/css/style.css
+++ b/css/style.css
@@ -655,21 +655,21 @@ hr.diagonal {
     text-align: center;
     margin: 5% auto 0; }
 
-@media screen and (max-width: 1550px) {
+@media screen and (max-width: 1600px) {
   body {
     font-size: 19px; } }
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1550px) {
   body {
     font-size: 18px; } }
 
-@media screen and (max-width: 1450px) {
+@media screen and (max-width: 1500px) {
   body {
-    font-size: 17px; } }
+    font-size: 16px; } }
 
 @media screen and (max-width: 1350px) {
   body {
-    font-size: 16px; }
+    font-size: 15px; }
   .i_view img {
     width: 15px; } }
 
@@ -684,6 +684,10 @@ hr.diagonal {
 @media screen and (max-width: 1170px) {
   body {
     font-size: 12px; } }
+
+@media screen and (max-width: 1100px) {
+  body {
+    font-size: 11px; } }
 
 /*.grid-sizer,
   .grid-item
